TEST_PROGRAMS/VALID/alexandre_st-louis_fortier/carriage-return.min
# Carriage returns were presents in power.min
var a:int;
var b:int;

