TEST_PROGRAMS/INVALID/evan_mcilroy/invalid_three.min
var a: 0;
var b: "string";
var c: 3.3;

